# kapibara-transport

./: Cargo.toml  README.md
src/: client.rs  empty.rs  error.rs  lib.rs  option.rs  server.rs
src/dns/: error.rs  mod.rs  option.rs  resolver.rs
src/tcp/: client.rs  mod.rs  option.rs  server.rs  stream.rs
src/tls/: error.rs  mod.rs  option.rs
src/websocket/: client.rs  mod.rs  option.rs  server.rs
