[package]
name = "kapibara-transport"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "http2"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
bytes = "1.7.1"
futures-util = "0.3.30"
hickory-resolver = { version = "0.24.1", features = ["serde-config"] }
http = "1.1.0"
log = "0.4.22"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-tungstenite = { version = "0.23.1", features = ["__rustls-tls"] }
trait-variant = "0.1.2"
webpki-roots = "0.26.3"
